package interpreter;

public enum VariableType {
    NUMBER,
    STRING,
    BOOLEAN
}
