@startuml
PrintScriptInterpreter *-- InterpreterState
PrintScriptInterpreter *-- StrategySelector
InterpreterState o-- Function
InterpreterState o-- Variable
Variable *-- VariableType
ExpressionEvaluator *- ExpressionResult
StrategySelector o-- InterpreterStrategy
InterpreterStrategy o--- ExpressionEvaluator
interface Interpreter {
    +interpret(AstComponent[]): void
}
interface Function {
    +executeFunction(Parameters): void

}
interface InterpreterState {
    +addNumericVariable(Variable<Double>): void
    +getNumericVariable(String name): Variable<Double>
    +setNumericVariable(String name, Double value): void
    +addStringVariable(Variable<String>): void
    +getStringVariable(String name): Variable<String>
    +setStringVariable(String name, String value): void
    +getVariableType(String name): VariableType
    +getFunction(String name): Function
    +addFunction(Function): void
}
class AstFunction implements Function
class PrintlnFunction implements Function
class PrintScriptInterpreter implements Interpreter
class PrintScriptState implements InterpreterState {
    -Map<String, Variable<Double>> numVariables
    -Map<String, Variable<String>> strVariables
    -Map<String, Function> functions
}
class StrategySelector {
    +execute(AstComponent): void
}
class Variable<T> {
    -VariableType
    -T value
    -String name
}
enum VariableType {
    NUMBER
    STRING
    BOOLEAN
}
class BinaryExpressionEvaluator implements ExpressionEvaluator
class ComponentEvaluator implements ExpressionEvaluator
class ConditionalEvaluator implements ExpressionEvaluator
class ExpressionResult {
    -VariableType
    -String stringResult
    -Double numericResult
    -Boolean boolResult
}
class IdentifierEvaluator implements ExpressionEvaluator
class LiteralEvaluator implements ExpressionEvaluator
interface ExpressionEvaluator {
    +evaluate(AstComponent): ExpressionResult
}
class AssignationStrategy implements InterpreterStrategy
class DeclarationStrategy implements InterpreterStrategy
class FunctionCallStrategy implements InterpreterStrategy
class IfStatementStrategy implements InterpreterStrategy
class ParametersStrategy implements InterpreterStrategy
interface InterpreterStrategy {
    +execute(AstComponent): void
}
@enduml